# open-cad

./: Readme.md  index.json  install.sh  manifest.md
caadoc/: index.json
cli/.tsc/: context.ts
cli/.tsc/Cangjie/TypeSharp/System/: context.ts  htmlUtils.ts  shell.ts
cli/.tsc/System/: Type.ts
cli/.tsc/System/IO/: EnumerationOptions.ts
cli/.tsc/System/Text/: Encoding.ts
cli/.tsc/System/Text/RegularExpressions/: Group.ts  GroupCollection.ts  Match.ts  MatchCollection.ts
cli/.tsc/System/Threading/Tasks/: Task.ts
cli/.tsc/TidyHPC/LiteJson/: ArrayWrapper.ts  Json.ts  JsonExtensions.ts  TraceInterface.ts
cli/.tsc/TidyHPC/LiteXml/: Xml.ts
cli/.tsc/TidyHPC/Routers/Args/: ArgsRouter.ts  ArgsRouterRecord.ts
cli/.tsc/TidyHPC/Routers/Urls/: Session.ts  UrlFilter.ts  UrlRouter.ts  UrlRouterEvents.ts  UrlRouterFilterRecord.ts  UrlRouterRecord.ts
cli/caa/: CMakeLists.txt  Inerfaces.ts  Interfaces.ts  Readme.md  index.ts  main.ts
cli/caa-build/: main.ts
cli/caa-build-plugin/: input.json  main.ts  package.json
cli/caa-debug/: index.ts  input.json
cli/caa-init/: Interfaces.ts  main.ts
cli/caa-init/Project/: CMakeLists.txt
cli/caa-init/Project/Template/: .gitignore  manifest.json
cli/caa-init/SDK/: CMakeLists.txt
cli/caa-installer/: catiar21.json  index.ts
cli/caa-installer/catiar21/: caa.json  catia.json  catvbtlicenser.json  catvbtsetup.json  demo.json  dotnet.json  dsls.json  dsls2015.json  rade.json  select-license.json  selectLicense.json  sp6.json  sp6_hotfix.json  vs2008.json  vs2008_sp1.json
cli/caa/Project/: CMakeLists.txt
cli/caa/Project/DemoFrm/CNext/code/dictionary/: DemoFrm.dico
cli/caa/Project/DemoFrm/CNext/resources/msgcatalog/: OyyDemoAddinHeader.CATNls
cli/caa/Project/DemoFrm/CNext/resources/msgcatalog/Simplified_Chinese/: OyyDemoAddinHeader.CATNls
cli/caa/Project/DemoFrm/DemoMod.m/: Imakefile.mk
cli/caa/Project/DemoFrm/DemoMod.m/LocalGenerated/win_b64/: mkCAAV5Licensing.cpp
cli/caa/Project/DemoFrm/DemoMod.m/LocalInterfaces/: OyyCmdCls.h  OyyDemoAddin.h
cli/caa/Project/DemoFrm/DemoMod.m/Objects/win_b64/: .incdirs.mk  .mkdata.mk  .mkdata.mkb
cli/caa/Project/DemoFrm/DemoMod.m/Objects/win_b64/.mkGraphs/: mkBSCompil.mkDG  mkBSGrammar.mkDG  mkBSLnkShl1st.mkDG  mkBSLnkShl2nd.mkDG
cli/caa/Project/DemoFrm/DemoMod.m/src/: OyyCmdCls.cpp  OyyDemoAddin.cpp  OyyDemoAddin.cpp.json
cli/caa/Project/DemoFrm/IdentityCard/: README.md
cli/caa/Project/DemoFrm/IdentityCard/Objects/win_b64/: .HeaderTable.file  .mkHLpath.mk  .mkdata.mk  .mkdata.mkb
cli/caa/Project/DemoFrm/IdentityCard/Objects/win_b64/.mkGraphs/: mkBSDummyNLS.mkDG  mkBSHeaderList.mkDG  mkBSHeaderMap.mkDG  mkBSHeaderRuler.mkDG  mkBSIdcardBuild.mkDG
cli/caa/Project/DemoFrm/ImportedInterfaces/win_b64/: ApplicationFrame.h  CATAssert.h  CATBSTR.h  CATBaseDispatch.h  CATBaseUnknown.h  CATBaseUnknown_var.h  CATBoolean.h  CATBooleanDef.h  CATCOMErrors.h  CATCORBAAny.h  CATCORBABoolean.h  CATCORBASequence.h  CATCORBATypes.h  CATCallbackManager.h  CATChar.h  CATCmdAccess.h  CATCmdContainer.h  CATCmdSeparator.h  CATCmdStarter.h  CATCmdWorkbench.h  CATCmdWorkshop.h  CATCollec.h  CATCollecRoot.h  CATCommand.h  CATCommandHeader.h  CATCreateExternalObject.h  CATCreateWorkshop.h  CATDYNMRYAllocFree.h  CATDataType.h  CATDestruct.h  CATErrDsc.h  CATErrParams.h  CATError.h  CATErrorDef.h  CATErrorDefs.h  CATErrorMacros.h  CATErrors.h  CATEventSubscriber.h  CATEventSubscriberTypedefs.h  CATFillDictionary.h  (+55 more)
cli/caa/Project/DemoFrm/ProtectedInterfaces/: DemoMod.h
cli/caa/Project/DemoFrm/various/win_b64/: framework.data
cli/caa/Project/DemoFrm/various/win_b64/DemoMod.m/: module.data
cli/caa/Project/DemoFrm/various/win_b64/HList/: ProtectedInterfaces.hl
cli/caa/Project/Template/: .gitignore  Addin.cpp  Addin.h  CommandClass.cpp  CommandClass.h  GeneralClass.cpp  GeneralClass.h  IdentityCard.h  Imakefile.mk  Install_config_win_b64
cli/caa/SDK/: CMakeLists.txt
cli/cmake/: Find.cmake  Readme.md  main.ts
cli/cpp/: index.ts
cli/debug/: index.ts  input.json  manifest.json
cli/dsls/: Readme.md  gen.json  main.ts  plugin.ts
cli/find-cmake/: Readme.md  main.ts
cli/find-cmake/Template/: Find.cmake
cli/init/: CMakeLists.txt  Readme.md  main.ts
cli/init/gitapi-result/: cmake.json  vscode.json
cli/nx/: CMakeLists.txt  main.ts
cli/nx-init/: CMakeLists.txt  main.ts  template.cpp
cli/testcase/: index.ts  manifest.json  test.ts
cli/tidycpp/: index.ts
cli/tidycpp-generator/: index.ts
cli/windows-include/: main.ts  remark.txt
cpp/: index.json
dsls/: index.json
